--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,9 @@
 \usepackage{fancyvrb}
 \usepackage{fvextra}
 
+% Quotes
+\usepackage{epigraph} 
+
 \include{acronyms}
 
 %\newcommand*{\fullref}[1]{\hyperref[{#1}]{\autoref*{#1}, \nameref*{#1}}}
